syntax = "proto3";
import "Events/DiadocMessage-PostApi.proto";
import "DocumentId.proto";

package Diadoc.Api.Proto;

message AcquireCounteragentRequest {
    optional string OrgId = 1;
    optional string Inn = 2;
    optional string MessageToCounteragent = 3;
    optional InvitationDocument InvitationDocument = 4;
    optional string BoxId = 5;
}

message InvitationDocument {
    Events.SignedContent SignedContent = 1;
    string FileName = 2;
    optional bool SignatureRequested = 3;
    optional string Type = 4;
}

message AcquireCounteragentResult {
    string OrgId = 1;
    optional DocumentId InvitationDocumentId = 2;
}

message AcquireCounteragentResultV2 {
    string BoxId = 1;
    optional DocumentId InvitationDocumentId = 2;
}
