syntax = "proto3";
import "Documents/Document.proto";

package Diadoc.Api.Proto.Documents;

message DocumentList {
    int32 TotalCount = 1;
    repeated Document Documents = 2;
    optional bool HasMoreResults = 3;
}
