syntax = "proto3";
import "Content.proto";
import "DocumentId.proto";
import "LockMode.proto";
import "TotalCountType.proto";
import "Docflow/PowerOfAttorneyAttachmentStatus.proto";
import "Documents/Document.proto";
import "Events/CancellationInfo.proto";
import "Events/ResolutionInfo.proto";
import "Events/ResolutionRequestInfo.proto";
import "Events/ResolutionRequestDenialInfo.proto";
import "Events/ResolutionRouteInfo.proto";
import "Events/RevocationRequestInfo.proto";
import "Events/PowerOfAttorneyInfo.proto";
import "OuterDocflows/OuterDocflow.proto";

package Diadoc.Api.Proto.Events;

message BoxEventList {
    repeated BoxEvent Events = 1;
    optional int32 TotalCount = 2;
    TotalCountType TotalCountType = 3;
}

message BoxEvent {
    string EventId = 1;
    optional Message Message = 2;
    optional MessagePatch Patch = 3;
    optional string IndexKey = 4;
}

message Message {
    string MessageId = 1;
    sfixed64 TimestampTicks = 2;
    sfixed64 LastPatchTimestampTicks = 3;
    string FromBoxId = 4;
    string FromTitle = 5;
    optional string ToBoxId = 6;
    optional string ToTitle = 7;
    repeated Entity Entities = 8;
    optional bool IsDraft = 9;
    optional bool DraftIsLocked = 10;
    optional bool DraftIsRecycled = 11;
    optional string CreatedFromDraftId = 12;
    repeated string DraftIsTransformedToMessageIdList = 13;
    optional bool IsDeleted = 14;
    optional bool IsTest = 15;
    optional bool IsInternal = 16;
    optional bool IsProxified = 17;
    optional string ProxyBoxId = 18;
    optional string ProxyTitle = 19;
    optional bool PacketIsLocked = 20;
    LockMode LockMode = 21;
    Documents.MessageType MessageType = 22;
    optional TemplateToLetterTransformationInfo TemplateToLetterTransformationInfo = 23;
    optional bool IsReusable = 24;
}

message Template {
    string MessageId = 1;
    sfixed64 TimestampTicks = 2;
    string FromBoxId = 3;
    string ToBoxId = 4;
    string MessageFromBoxId = 5;
    string MessageToBoxId = 6;
    repeated Entity Entities = 7;
    optional bool IsDeleted = 8;
    optional string MessageToDepartmentId = 9;
    LockMode LockMode = 10;
    optional string MessageProxyBoxId = 11;
    optional string MessageProxyDepartmentId = 12;
    optional bool IsReusable = 13;
}

message MessagePatch {
    string MessageId = 1;
    sfixed64 TimestampTicks = 2;
    repeated Entity Entities = 3;
    optional bool ForDraft = 4;
    optional bool DraftIsRecycled = 5;
    repeated string DraftIsTransformedToMessageIdList = 6;
    optional bool DraftIsLocked = 7;
    optional bool MessageIsDeleted = 8;
    repeated EntityPatch EntityPatches = 9;
    optional bool MessageIsRestored = 10;
    optional bool MessageIsDelivered = 11;
    optional string DeliveredPatchId = 12;
    string PatchId = 13;
    Documents.MessageType MessageType = 15;
}

message Entity {
    optional EntityType EntityType = 1;
    string EntityId = 2;
    optional string AuthorUserId = 33;
    optional string ParentEntityId = 3;
    optional Content Content = 4;
    optional AttachmentType AttachmentType = 5;
    optional string FileName = 6;
    optional bool NeedRecipientSignature = 7;
    optional string SignerBoxId = 8;
    optional string NotDeliveredEventId = 10;
    optional Documents.Document DocumentInfo = 11;
    optional sfixed64 RawCreationDate = 12;
    optional ResolutionInfo ResolutionInfo = 13;
    optional string SignerDepartmentId = 14;
    optional ResolutionRequestInfo ResolutionRequestInfo = 15;
    optional ResolutionRequestDenialInfo ResolutionRequestDenialInfo = 16;
    optional bool NeedReceipt = 17;
    optional string PacketId = 18;
    optional bool IsApprovementSignature = 19;
    optional bool IsEncryptedContent = 20;
    optional string AttachmentVersion = 21;
    optional ResolutionRouteAssignmentInfo ResolutionRouteAssignmentInfo = 22;
    optional ResolutionRouteRemovalInfo ResolutionRouteRemovalInfo = 23;
    optional CancellationInfo CancellationInfo = 24;
    repeated string Labels = 25;
    optional string Version = 26;
    optional TemplateTransformationInfo TemplateTransformationInfo = 27;
    optional TemplateRefusalInfo TemplateRefusalInfo = 28;
    optional OuterDocflows.OuterDocflowInfo OuterDocflow = 29;
    optional RevocationRequestInfo RevocationRequestInfo = 30;
    optional string ContentTypeId = 31;
    optional PowerOfAttorneyInfo PowerOfAttorneyInfo = 32;
    optional MoveDocumentInfo MoveDocumentInfo = 34;
    optional Docflow.PowerOfAttorneyAttachmentStatus PowerOfAttorneyAttachmentStatus = 35;
}

message EntityPatch {
    string EntityId = 1;
    optional bool DocumentIsDeleted = 2;
    optional string MovedToDepartment = 3;
    optional bool DocumentIsRestored = 4;
    optional bool ContentIsPatched = 5;
    optional string ForwardedToBoxId = 6;
}

message TemplateToLetterTransformationInfo {
    string LetterFromBoxId = 1;
    string LetterToBoxId = 2;
    optional string LetterFromDepartmentId = 3;
    optional string LetterToDepartmentId = 4;
    optional string LetterProxyBoxId = 5;
    optional string LetterProxyDepartmentId = 6;
}

message TemplateTransformationInfo {
    optional DocumentId TransformedToDocumentId = 1;
    optional string Author = 2;
}

message TemplateRefusalInfo {
    TemplateRefusalType Type = 1;
    string BoxId = 2;
    optional string Author = 3;
    optional string Comment = 4;
}

message MoveDocumentInfo {
    string MovedFromDepartment = 1;
    string MovedToDepartment = 2;
}

enum TemplateRefusalType {
    UnknownTemplateRefusalType = 0;
    Refusal = 1;
    Withdrawal = 2;
}

enum EntityType {
    UnknownEntityType = 0;
    Attachment = 1;
    Signature = 2;
}

enum AttachmentType {
    Nonformalized = 0;
    Invoice = 1;
    InvoiceReceipt = 2;
    InvoiceConfirmation = 3;
    InvoiceCorrectionRequest = 4;
    AttachmentComment = 5;
    DeliveryFailureNotification = 6;
    EancomInvoic = 7;
    SignatureRequestRejection = 8;
    EcrCatConformanceCertificateMetadata = 9;
    SignatureVerificationReport = 10;
    TrustConnectionRequest = 11;
    Torg12 = 12;
    InvoiceRevision = 13;
    InvoiceCorrection = 14;
    InvoiceCorrectionRevision = 15;
    AcceptanceCertificate = 16;
    StructuredData = 17;
    ProformaInvoice = 18;
    XmlTorg12 = 19;
    XmlAcceptanceCertificate = 20;
    XmlTorg12BuyerTitle = 21;
    XmlAcceptanceCertificateBuyerTitle = 22;
    Resolution = 23;
    ResolutionRequest = 24;
    ResolutionRequestDenial = 25;
    PriceList = 26;
    Receipt = 27;
    XmlSignatureRejection = 28;
    RevocationRequest = 29;
    PriceListAgreement = 30;
    CertificateRegistry = 34;
    ReconciliationAct = 35;
    Contract = 36;
    Torg13 = 37;
    ServiceDetails = 38;
    RoamingNotification = 39;
    SupplementaryAgreement = 40;
    UniversalTransferDocument = 41;
    UniversalTransferDocumentBuyerTitle = 42;
    UniversalTransferDocumentRevision = 45;
    UniversalCorrectionDocument = 49;
    UniversalCorrectionDocumentRevision = 50;
    UniversalCorrectionDocumentBuyerTitle = 51;
    CustomData = 64;
    MoveDocument = 65;
    ResolutionRouteAssignmentAttachment = 66;
    ResolutionRouteRemovalAttachment = 67;
    Title = 68;
    Cancellation = 69;
    Edition = 71;
    DeletionRestoration = 72;
    TemplateTransformation = 73;
    TemplateRefusal = 74;
    OuterDocflow = 75;
    RoamingConfirmation = 76;
    PowerOfAttorney = 77;
    PowerOfAttorneyStatus = 78;
}
